--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://website-i-think.vercel.app" target="_blank" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">!!!Click this to get free tabs!!!</a>
+    <a href="index.html" target="_blank" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">!!!Click this to get free tabs!!!</a>
     <hr>
     <a href="old.html" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">view all versions of this website </a>
 </body>
