--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html" target="_blank" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">!!!Click this to get free tabs!!!</a>
-    <hr>
     <a href="old.html" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">view all versions of this website </a>
+    <p href="index.html" target="_blank" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">!!!Click this to get free tabs!!!</p>
 </body>
 </html>
