--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="old.html" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">view all versions of this website </a>
-    <p href="index.html" target="_blank" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">!!!Click this to get free tabs!!!</p>
+    <a href="index.html" target="_blank" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">!!!Click this to get free tabs!!!</a>
 </body>
 </html>
