--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <a href="old.html" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">view all versions of this website </a>
+<body style="background-color: black; color: white; font-family: Arial, sans-serif;">
+    <a href="old.html" style="color: white;">view all versions of this website </a>
     <hr>
-    <a href="index.html" target="_blank" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">!!!Click this to get free tabs!!!</a>
+    <a href="index.html" target="_blank" style="color: white;">!!!Click this to get free tabs!!!</a>
 </body>
 </html>
