--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>a website
+    </title>
 </head>
 <body style="background-color: black; color: white; font-family: Arial, sans-serif;">
-    <a href="old.html" style="color: white;">view all versions of this website </a>
+    <div style="font-family: Geneva, Tahoma, sans-serif; color">
+        <a href="index.html" style="font-size:24px; font-weight:600; color: white">white mode</a>
+    </div>
+    <a href="index.html" target="_blank" style="color: white">!!!Click this to get free tabs!!!</a>
     <hr>
-    <a href="index.html" target="_blank" style="color: white;">!!!Click this to get free tabs!!!</a>
+    <a href="old.html" style="color: white;">view all versions of this website </a>
 </body>
 </html>
