--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div style="font-family: Geneva, Tahoma, sans-serif; color">
         <a href="index.html" style="font-size:24px; font-weight:600; color: white">white mode</a>
     </div>
-    <a href="index.html" target="_blank" style="color: white">!!!Click this to get free tabs!!!</a>
     <hr>
     <a href="old.html" style="color: white;">view all versions of this website </a>
+    <hr>
+    <a href="white-mode.html" target="_blank" style="color: white">!!!Click this to get free tabs!!!</a>
 </body>
 </html>
