--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>a website
-    </title>
-</head>
-<body style="background-color: black; color: white; font-family: Arial, sans-serif;">
-    <div style="font-family: Geneva, Tahoma, sans-serif; color">
-        <a href="index.html" style="font-size:24px; font-weight:600; color: white">white mode</a>
-    </div>
-    <hr>
-    <a href="old.html" style="color: white;">view all versions of this website </a>
-    <hr>
-    <a href="white-mode.html" target="_blank" style="color: white">!!!Click this to get free tabs!!!</a>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>a website</title>
+    </head>
+    <body style="background-color: black; color: white; font-family: Arial, sans-serif;">
+        <div style="font-family: Geneva, Tahoma, sans-serif; color">
+            <a href="white-mode.html" style="font-size:24px; font-weight:600; color: white">white mode</a>
+        </div>
+        <hr>
+        <a href="old.html" style="color: white;">view all versions of this website </a>
+        <hr>
+        <a href="index.html" target="_blank" style="color: white">!!!Click this to get free tabs!!!</a>
+    </body>
 </html>
