--- a/old.html
+++ b/old.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <a href="old/v0.1-build1.html">v0.1 build 1</a>
+    <br>
     <a href="old/v0.2-build2.html">v0.2 build 2</a>
+    <br>
     <a href="old/v0.2.5-build3.html">v0.2.5 build 3</a>
+    <br>
+    <a href="old/v0.3-build4.html">v0.3 build 4</a>
+    <br>
+    <a href="old/v0.3.5-build11.html">v0.3.5 build 11</a>
 </body>
 </html>
