--- a/white-mode.html
+++ b/white-mode.html
@@ -12,6 +12,6 @@
     <hr>
     <a href="old.html" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">view all versions of this website </a>
     <hr>
-    <a href="index.html" target="_blank" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">!!!Click this to get free tabs!!!</a>
+    <a href="white-mode.html" target="_blank" style="font-family: Geneva, Tahoma, sans-serif; text-align: center;">!!!Click this to get free tabs!!!</a>
 </body>
 </html>
