--- a/idk.html
+++ b/idk.html
@@ -6,16 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <main style="font-family: Geneva, Tahoma, sans-serif; text-align: center; padding: 2rem;">
-        <h1>Website I Think</h1>
-        <p><a href="https://website-i-think.vercel.app" target="_blank">!!!Click this to get free tabs!!!</a></p>
-        <hr>
-        <p style="margin-top:1rem;">View versions:</p>
-        <ul style="list-style:none; padding:0; margin:0.5rem 0;">
-            <li><a href="old/v0.1-build1.html">v0.1-build1</a></li>
-            <li><a href="old/v0.2-build2.html">v0.2-build2</a></li>
-            <li><a href="old/v0.2.5-build3.html">v0.2.5-build3</a></li>
-        </ul>
-    </main>
+    <script scr="script.js"></script>
 </body>
 </html>
